--- a/Android Dev Assistant/Localizable.xcstrings
+++ b/Android Dev Assistant/Localizable.xcstrings
@@ -14,6 +14,16 @@
         }
       }
     },
+    "by 8K" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "开发者：8K"
+          }
+        }
+      }
+    },
     "Copied to clipboard" : {
       "localizations" : {
         "zh-Hans" : {
@@ -113,6 +123,19 @@
           }
         }
       }
+    },
+    "Settings" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "设置"
+          }
+        }
+      }
+    },
+    "v%@" : {
+      "shouldTranslate" : false
     }
   },
   "version" : "1.1"
