Added scrcpy shortcut

--- a/Android Dev Assistant/Localizable.xcstrings
+++ b/Android Dev Assistant/Localizable.xcstrings
@@ -114,6 +114,9 @@
         }
       }
     },
+    "Scrcpy" : {
+      "shouldTranslate" : false
+    },
     "Screenshot" : {
       "localizations" : {
         "zh-Hans" : {
