--- a/Android Dev Assistant/Localizable.xcstrings
+++ b/Android Dev Assistant/Localizable.xcstrings
@@ -107,6 +107,9 @@
         }
       }
     },
+    "Perfetto" : {
+      "shouldTranslate" : false
+    },
     "Remove" : {
       "localizations" : {
         "zh-Hans" : {
