Added force close toggle

--- a/Android Dev Assistant/Localizable.xcstrings
+++ b/Android Dev Assistant/Localizable.xcstrings
@@ -120,6 +120,16 @@
         }
       }
     },
+    "Restart" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "冷启"
+          }
+        }
+      }
+    },
     "Save" : {
       "localizations" : {
         "zh-Hans" : {
