Prepare resize screen

--- a/Android Dev Assistant/Localizable.xcstrings
+++ b/Android Dev Assistant/Localizable.xcstrings
@@ -97,6 +97,16 @@
         }
       }
     },
+    "Mock Screen" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "模拟屏幕"
+          }
+        }
+      }
+    },
     "Not found" : {
       "localizations" : {
         "zh-Hans" : {
