--- a/Android Dev Assistant/Localizable.xcstrings
+++ b/Android Dev Assistant/Localizable.xcstrings
@@ -27,6 +27,36 @@
         }
       }
     },
+    "Cancel" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "取消"
+          }
+        }
+      }
+    },
+    "Confirm" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "确认"
+          }
+        }
+      }
+    },
+    "Confirm uninstall?" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "确认卸载应用？"
+          }
+        }
+      }
+    },
     "Copied to clipboard" : {
       "localizations" : {
         "zh-Hans" : {
@@ -266,6 +296,16 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "平板16:10"
+          }
+        }
+      }
+    },
+    "Uninstall" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "卸载"
           }
         }
       }
