--- a/Android Dev Assistant/Localizable.xcstrings
+++ b/Android Dev Assistant/Localizable.xcstrings
@@ -133,6 +133,16 @@
         }
       }
     },
+    "File not found" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "未能找到文件"
+          }
+        }
+      }
+    },
     "Fold 1:1" : {
       "localizations" : {
         "zh-Hans" : {
